LIST OF CHANGES
---------------

release 58.0.0
 - a class for generating job definitions for autoqc generic
   checks
 - implementation of job generation for autoqc generic checks
   for artic and ampliconstats
 - generation of the autoqc generic result for artic and the
   review result is removed from the stage2pp job for artic
 - generation of the autoqc generic result for ampliconstats is
   removed from the stage2App job for ampliconstats

release 57.17.0
 - a generic way to specify constructor options in the function
   listing in a registry and its implementation to iRODS archival
   jobs and a stage2pp job
 - implementation for the ampliconstats portable pipeline
 - new pipeline function - stage2App - and its mapping to the
   npg_pipeline::function::stage2pp class
 - a new portable pipeline to produce ampliconstats data and its
   mapping to the stage2App pipeline function

release 57.16.0
 - a new function for archival of pp data to iRODS
 - stage2pp function implementation is refactored to create common functions
   and attributes, which in future could be used by additional portable
   pipelines

release 57.15.0
 - append autoqc generic result generation at the end of ncov2019_artic_nf
   portable pipeline
 - tests update following a change in the default behaviour of the
   add_object method in WTSI::NPG::iRODS 

release 57.14.0
 - switch to sample control flag when determining eligibility for
   pp data archival

release 57.13.1
 - made run deletion policy consistent with a change to eligibility
   for iRODS archival (see commit 457da605c9f7fe97f82954ffe7155ca96e034753),
   which makes non-products (tag zero and spiked PhiX tag) not being
   archived to iRODS if none of the lane products are archived to iRODS

release 57.13.0
 - a new script - npg_upload2climb - to perform the upload, which is
   specified in the definition generated by the pp_archiver function
 - extended the spiked phix i5 tag (SPIKED_PHIX_TAG2) to 10-bases