@@ -1,0 +1,138 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+use FindBin qw($Bin);
+use lib ( -d "$Bin/../lib/perl5" ? "$Bin/../lib/perl5" : "$Bin/../lib" );
+use Carp;
+use Log::Log4perl qw(:easy);
+
+use npg_pipeline::product::heron::upload::climb2mlwh;
+
+our $VERSION = '0';
+
+Log::Log4perl->easy_init({layout => '%d %-5p %c - %m%n'});
+my $c2w = npg_pipeline::product::heron::upload::climb2mlwh->new_with_options();
+$c2w->run();
+
+=head1 NAME
+
+npg_climb2mlwh
+
+=head1 CONFIGURATION
+
+=head1 USAGE
+
+npg_climb2mlwh --host climb.com --user me --pkey_file ~/.ssh/climb.pem \
+               --run_folder 201225_B12345_666_ABCTKDRXX [--dry_run] [--verbose]
+
+npg_climb2mlwh --help
+
+=head1 SYNOPSIS
+
+This perl script is designed to connect to a remote server and return a list
+of files for a particular run folder. It will then parse information from
+the filenames and use that information to update the ML warehouse database.
+
+=head1 DESCRIPTION
+
+=head1 REQUIRED ARGUMENTS
+
+=head1 OPTIONS
+
+=over
+
+=item --host
+
+The remote host to connect to.
+
+=item --user
+
+The user to connect to the remote host as.
+
+=item --pkey_file
+
+=item --run_folder
+
+=item --dry_run - off by default
+
+=item --verbose - off by default
+
+=item --help
+
+=back
+
+=head1 SUBROUTINES/METHODS
+
+=head1 DIAGNOSTICS
+
+=head1 CONFIGURATION AND ENVIRONMENT
+
+=head1 DEPENDENCIES
+
+=over
+
+=item strict
+
+=item warnings
+
+=item FindBin
+
+=item lib
+
+=item English
+
+=item Carp
+
+=item Readonly
+
+=item Getopt::Long
+
+=item Pod::Usage
+
+=item Log::Log4perl
+
+=item Try::Tiny
+
+=item DateTime
+
+=item WTSI::DNAP::Warehouse::Schema
+
+=item npg_tracking::glossary::composition::factory::rpt_list;
+
+=back
+
+=head1 INCOMPATIBILITIES
+
+None known
+
+=head1 EXIT STATUS
+
+0 on success, 2 on error in scripts' arguments, 1 on any other error
+
+=head1 BUGS AND LIMITATIONS
+
+=head1 AUTHOR
+
+Jennifer Liddle E<lt>js10@sanger.ac.ukE<gt>
+
+=head1 LICENSE AND COPYRIGHT
+
+Copyright (C) 2020 Genome Research Ltd.
+
+This file is part of NPG.
+
+NPG is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+=cut
