@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - added npg_climb2mlwh to update warehouse from uploaded
+   climb data.
+
 release 58.0.0
  - a class for generating job definitions for autoqc generic
    checks
